[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/ui/paper.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/canning_heroes_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/GameOver.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/click.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/ui/Slackey-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/ui/OpenSans-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=5]
size = 110
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 72
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.937255, 0.458824, 0.133333, 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=6]
resource_name = "GoodJobAnimation"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GoodJobLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.5, 2 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "ScoreAnimation" ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "ScoreAnimation"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ScoreLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( -2, -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.15, 1.15 ), Vector2( 1, 1 ) ]
}

[node name="GameOver" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoodJobLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -960.0
margin_top = 226.639
margin_right = 960.0
margin_bottom = 380.639
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 981.01, 71.0478 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.937255, 0.458824, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.486275, 0.0745098, 0.0862745, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "GOOD JOB"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.5
margin_bottom = 50.5
rect_pivot_offset = Vector2( 960.505, 56.303 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.458824, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.486275, 0.0745098, 0.0862745, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "A Winner is You"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.5
margin_top = -218.58
margin_right = 67.5
margin_bottom = -111.58
theme = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "GoodJobAnimation"
anims/GoodJobAnimation = SubResource( 6 )
anims/ScoreAnimation = SubResource( 7 )
[connection signal="pressed" from="Control/OkButton" to="." method="_on_OkButton_pressed"]
